--- a/Chesler/Chesler.html
+++ b/Chesler/Chesler.html
@@ -18,7 +18,27 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Chesler21.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -30,24 +50,25 @@ His shop employed "a growing group of men who produced scores of strips and enti
 </p><p>
 Titles
 </p><p>
-<li>Bulls Eye Comics (1944)
-<li>Captain Battle Comics (1942)
-<li>Carnival Comics (1945)
-<li>Cocomalt Book of Comics (1938)
-<li>Dynamic Comics (1941)
-<li>Jest Comics (1944)
-<li>Kayo Komics (1945)
-<li>Komik Pages (1945)
-<li>Major Victory Comics (1944)
-<li>Punch Comics (1941)
-<li>Red Seal Comics (1945)
-<li>Scoop Comics (1941)
-<li>Skyrocket Comics (1944)
-<li>Snap Comics (1944)
-<li>Spotlight Comics (1944)
-<li>Star Comics (1937)
-<li>Star Ranger (1937)
-<li>Yankee Comics (1941)
+<li><a href="Chesler1.jpg">Bulls Eye Comics</a> (1944)
+<li><a href="Chesler2.jpg">Captain Battle Comics</a> (1942)
+<li><a href="Chesler3.jpg">Carnival Comics</a> (1945)
+<li><a href="Chesler4.jpg">Cocomalt Book of Comics</a> (1938)
+<li><a href="../DynamicComics/DynamicComics.html">Dynamic Comics</a> (1941)
+<li><a href="Chesler5.jpg">Hi Yi</a> (1945)
+<li><a href="Chesler6.jpg">Jest Comics</a> (1944)
+<li><a href="Chesler8.jpg">Kayo Komics</a> (1945)
+<li><a href="Chesler9.jpg">Komik Pages</a> (1945)
+<li><a href="Chesler10.jpg">Major Victory Comics</a> (1944)
+<li><a href="Chesler13.jpg">Punch Comics</a> (1941)
+<li><a href="Chesler14.jpg">Red Seal Comics</a> (1945)
+<li><a href="Chesler15.jpg">Scoop Comics</a> (1941)
+<li><a href="Chesler16.jpg">Skyrocket Comics</a> (1944)
+<li><a href="Chesler17.jpg">Snap Comics</a> (1944)
+<li><a href="Chesler18.jpg">Spotlight Comics</a> (1944)
+<li><a href="Chesler19.jpg">Star Comics</a> (1937)
+<li><a href="Chesler20.jpg">Star Ranger</a> (1937)
+<li><a href="Chesler21.jpg">Yankee Comics</a>     (1941)
 
 </p>
 
