--- a/index.html
+++ b/index.html
@@ -7047,6 +7047,13 @@
 </tr>
 
 <tr>
+<td>Fantasy Illustrated Magazine</td>
+<td>1963</td>
+<td>Bill Spicer</td>
+<td><a href="GraphicStoryMagazine/GraphicStoryMagazine.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fantasy Masterpieces</td>
 <td>1966</td>
 <td>Marvel</td>
@@ -8140,13 +8147,6 @@
 </tr>
 
 <tr>
-<td>Grandville</td>
-<td>2009</td>
-<td>Jonathan Cape</td>
-<td><a href="Grandville/Grandville.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Graham Ingles</td>
 <td>1915</td>
 <td>Creator</td>
@@ -8154,10 +8154,24 @@
 </tr>
 
 <tr>
+<td>Grandville</td>
+<td>2009</td>
+<td>Jonathan Cape</td>
+<td><a href="Grandville/Grandville.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Grant Morrison</td>
 <td>1960</td>
 <td>Creator</td>
 <td><a href="GrantMorrison/GrantMorrison.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Graphic Story Magazine</td>
+<td>1967</td>
+<td>Bill Spicer</td>
+<td><a href="GraphicStoryMagazine/GraphicStoryMagazine.html">Details</a></td>
 </tr>
 
 <tr>
