--- a/index.html
+++ b/index.html
@@ -16802,6 +16802,13 @@
 </tr>
 
 <tr>
+<td>Tex Avery</td>
+<td>1908</td>
+<td>WarnerBros</td>
+<td><a href="TexAvery/TexAvery.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tex Dawson Gun-Slinger</td>
 <td>1973</td>
 <td>Marvel</td>
