--- a/Avon/Avon.html
+++ b/Avon/Avon.html
@@ -10,38 +10,67 @@
 <body>
 <h1>Avon Publications</h1>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Avon1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Avon14.jpg"></div>
+
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+
 Avon Publications is one of the top most publishers of romance fiction. At Avon's initial stages, it was an American paperback book and comic book publisher. The shift in content occurred in the early 1970s with multiple Avon romance titles reaching and maintaining spots in bestseller lists, demonstrating the market and potential profits in romance publication. As of 2010, Avon is an imprint of HarperCollins. No relations to Avon Products (cosmetics).
 </p><p>
 Avon Books was founded in 1941 by the American News Company (ANC) to create a rival to Pocket Books. They hired brother and sister Joseph Meyers and Edna Meyers Williams to establish the company. ANC bought out J.S. Ogilvie Publications, a dime novel publisher partly owned by both the Meyers, and renamed it "Avon Publications". They also got into comic books. "The early Avons were somewhat similar in appearance to the existing paperbacks of Pocket Books, resulting in an immediate and largely ineffective lawsuit by that company.
 </p><p>
 
-<li>All True Detective
-<li>Atomic Spy Cases
-<li>Attack On Planet Mars
-<li>Avon Fantasy - An Earth Man On Venus
-<li>Bachelor's Diary
-<li>Badmen of the West
-<li>Badmen of Tombstone
-<li>Behind Prison Bars
-<li>Betty and Her Steady
-<li>The Blackhawk Indian Tomahawk War
-<li>Blazing Six Guns
-<li>Boy Detective
-<li>Buddies in the U.S. Army
-<li>Butch Cassidy
-<li>Campus Romance
-<li>Captain Silver's Log of the Sea Hound
-<li><a href="../CaptainSavage/CaptainSavage.html">Captain Savage</a> 1950
-<li>Chief Crazy Horse
-<li>Chief Victorio's Apache Massacre
-<li>City of the Living Dead
-<li>Complete Romance
-<li>Cow Puncher
-<li>Custer's Last Fight
-<li>The Dalton Boys
-<li>Davy Crockett
-<li>Diary of Horror
-<li><a href="../EerieAvon/EerieAvon.html">Eerie Comics</a> 1941
+<li><a href="Avon1.jpg">All True Detective</a> (1952)
+<li><a href="Avon2.jpg">Atomic Spy Cases</a> (1950)
+<li><a href="Avon3.jpg">Attack On Planet Mars</a> (1951)
+<li><a href="Avon4.jpg">Avon Fantasy - An Earth Man On Venus</a> (1951)
+<li><a href="Avon5.jpg">Bachelor's Diary</a> (1949)
+<li><a href="Avon6.jpg">Badmen of the West</a> (1951)
+<li><a href="Avon7.jpg">Badmen of Tombstone</a> (1950)
+<li><a href="Avon8.jpg">Behind Prison Bars</a> (1952)
+<li><a href="Avon9.jpg">Betty and Her Steady</a> (1950)
+<li><a href="Avon10.jpg">Blackhawk Indian Tomahawk War</a> (1951)
+<li><a href="Avon11.jpg">Blazing Six Guns</a> (1952)
+<li><a href="Avon12.jpg">Boy Detective</a> (1951)
+<li><a href="Avon13.jpg">Buddies in the U.S. Army</a> (1952)
+<li><a href="Avon14.jpg">Butch Cassidy</a> (1951)
+<li>Campus Romance (1949)
+<li>Captain Silver's Log of the Sea Hound (1945)
+<li><a href="../CaptainSavage/CaptainSavage.html">Captain Savage</a> (1950)
+<li>Chief Crazy Horse (1950)
+<li>Chief Victorio's Apache Massacre (1951)
+<li>City of the Living Dead (1952)
+<li>Complete Romance (1949)
+<li>Cow Puncher (1953)
+<li>Custer's Last Fight (1950)
+<li>Dalton Boys (1951)
+<li>Davy Crockett (1951)
+<li>Diary of Horror (1952)
+<li><a href="../EerieAvon/EerieAvon.html">Eerie Comics</a> (1941)
 <li>Escape from Devil's Island
 <li>Famous Gangsters
 <li>Fighting Daniel Boone
