--- a/index.html
+++ b/index.html
@@ -3929,13 +3929,6 @@
 </tr>
 
 <tr>
-<td>Captain Marvel (Shazam)</td>
-<td>1941</td>
-<td>Fawcett</td>
-<td><a href="Shazam/Shazam.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Captain Marvel</td>
 <td>1968</td>
 <td>Marvel</td>
@@ -3943,10 +3936,24 @@
 </tr>
 
 <tr>
+<td>Captain Marvel (Shazam)</td>
+<td>1941</td>
+<td>Fawcett</td>
+<td><a href="Shazam/Shazam.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Marvel and the Carol Corps</td>
 <td>2015</td>
 <td>Marvel</td>
 <td><a href="CaptMarvelCarolCorps/CaptMarvelCarolCorps.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Captain Marvel Jr.</td>
+<td>1942</td>
+<td>Fawcett</td>
+<td><a href="CaptainMarvelJr/CaptainMarvelJr.html">Details</a></td>
 </tr>
 
 <tr>
