--- a/PeterBagge/PeterBagge.html
+++ b/PeterBagge/PeterBagge.html
@@ -68,17 +68,18 @@ His stories often use black humor and exaggerated cartooning to dramatize the re
 </p><p>
 Moving to New York City in the mid-1970s, Bagge attended the School of Visual Arts for three semesters in 1977 before dropping out to work on <a href="../PunkMagazine/PunkMagazine.html">Punk Magazine</a>.
 </p><p>
+After doing some early work for Scew, High Times, and Swank, Bagge succeeded Rebert Crumb as the editor or Weirdo in 1984.
+</p><p>
 Series<br>
-<li>The Wacky World of Peter Bagge/Ken Weiner (1982)
-<li>Neat Stuff (1985–1989)
-<li>Hate (1990–1998)
-<li>Martini Baton (1993)
-<li>The Bradleys (1999–2000)
-<li>Junior and Friends (2000–2001)
-<li>Yeah! (1999-2000)
-<li>Hate Annual (2001–2011)
+<li><a href="PeterBagge1.jpg">The Wacky World of Peter Bagge</a> (1982)
+<li><a href="../NeatStuff/NeatStuff.html">Neat Stuff</a> (1985)
+<li><a href="../Hate/Hate.html">Hate</a> (1990
+<li><a href="PeterBagge2.jpg">Martini Baton</a> (1993)
+<li>The Bradleys (1999)
+<li>Junior and Friends (2000)
+<li>Yeah! (1999)
 <li>Sweatshop (2003)
-<li>Apocalypse Nerd (2005–2007)
+<li>Apocalypse Nerd (2005)
 <li>Reset (2012)
 </p><p>
 Collected editions<br>
