--- a/index.html
+++ b/index.html
@@ -2682,6 +2682,13 @@
 </tr>
 
 <tr>
+<td>Bat Lash</td>
+<td>1968</td>
+<td>DC</td>
+<td><a href="BatLash/BatLash.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Batgirl</td>
 <td>2000</td>
 <td>DC</td>
@@ -4185,6 +4192,13 @@
 <td>1912</td>
 <td>Creator</td>
 <td><a href="CharlesAddams/CharlesAddams.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Charles Biro</td>
+<td>1911</td>
+<td>Creator</td>
+<td><a href="CharlesBiro/CharlesBiro.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14790,6 +14804,13 @@
 <td>2018</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrnasoSabrina/DrnasoSabrina.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sad Sack</td>
+<td>1942</td>
+<td>Harvey</td>
+<td><a href="SadSack/SadSack.html">Details</a></td>
 </tr>
 
 <tr>
