--- a/CarlBarks/CarlBarks.html
+++ b/CarlBarks/CarlBarks.html
@@ -32,6 +32,10 @@
 Carl Barks (1901 – 2000) was an American cartoonist, author, and painter. He is best known for his comics about Donald Duck and as the creator of Scrooge McDuck. He worked anonymously until late in his career. Fans dubbed him The Duck Man and The Good Duck Artist. In 1987, Barks was one of the three inaugural inductees of the Will Eisner Comic Book Hall of Fame.
 </p><p>
 Barks worked for the Disney Studio and Western Publishing where he created Duckburg and many of its inhabitants, such as Scrooge McDuck (1947), Gladstone Gander (1948), the Beagle Boys (1951), The Junior Woodchucks (1951), Gyro Gearloose (1952), Cornelius Coot (1952), Flintheart Glomgold (1956), John D. Rockerduck (1961) and Magica De Spell (1961). Will Eisner called him "the Hans Christian Andersen of comic books."
+</p><p>
+"They never did anything with comic books," said Don Rosa, and artist who grew up on Bark's stories and has never outgrown his love for them. "All Disney ever did was produce movies, run theme parks, and sue people. Those were their three industries.
+</p><p>
+"Disney just used Donald Duck and Mickey Mouse as actors more or less," Rosa said. "They were images. Dell [Comics] turned both of them into true characters. And it's Barks who defined the character of Donald Duck for comic books, the only place where the character was ever developed."
 </p>
 </body>
 </html>
