--- a/Watchmen/watchmen.html
+++ b/Watchmen/watchmen.html
@@ -19,6 +19,7 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="Watchmen.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Watchmen001.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Watchmen002.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Watchmen003.jpg"></div>
@@ -32,6 +33,9 @@
 <div class="mySlides" style="text-align: center;"><img src="Watchmen011.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Watchmen012.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Watchmen013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Watchmen014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Watchmen015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Watchmen016.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
