--- a/index.html
+++ b/index.html
@@ -3202,6 +3202,13 @@
 </tr>
 
 <tr>
+<td>Black Canary</td>
+<td>1947</td>
+<td>DC</td>
+<td><a href="BlackCanary/BlackCanary.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black Cat</td>
 <td>1946</td>
 <td>Harvey</td>
