--- a/WeirdMysteries/WeirdMysteries.html
+++ b/WeirdMysteries/WeirdMysteries.html
@@ -36,7 +36,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-A pre comic book code Horror Anthology series by Stanley Morse Gilmore Magazines.
+A pre comic book code Horror Anthology series by Stanley Morse Gilmore Magazines. Covers by Bernard Baily. Issue #1 cover Basil Wolverton and Bernard Baily.
 </p>
 </body>
 </html>
