--- a/index.html
+++ b/index.html
@@ -2500,6 +2500,13 @@
 </tr>
 
 <tr>
+<td>Axa</td>
+<td>1978</td>
+<td>Ken Pierce</td>
+<td><a href="Axa/Axa.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Axe Cop</td>
 <td>2010</td>
 <td>Dark Horse</td>
@@ -15840,6 +15847,13 @@
 <td>1942</td>
 <td>Columbia</td>
 <td><a href="SparkyWatts/SparkyWatts.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spectre</td>
+<td>1940</td>
+<td>DC</td>
+<td><a href="Spectre/Spectre.html">Details</a></td>
 </tr>
 
 <tr>
