--- a/HumanTorch/HumanTorch.html
+++ b/HumanTorch/HumanTorch.html
@@ -2,20 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Human Torch</title>
 </head>
 
 <body>
-the Human Torch<br>
-<img src="https://blzim.github.io/kb/Creation/MarvelComics/MarvelComics001.jpg"> 
-<img src="HumanTorch1.jpg"> <br>
-Series: 38 issues (#2-38) 1940-1954 <br>
-Publisher: Marvel<br>
+<img src="HumanTorch1.jpg">
 <p>
-First appearence in Marvel Comics #1 (1939).
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="HumanTorch1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HumanTorch2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HumanTorch3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HumanTorch4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HumanTorch5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HumanTorch6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HumanTorch7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HumanTorch8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HumanTorch9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HumanTorch10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HumanTorch11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HumanTorch12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-The Human Torch is a fictional superhero appearing in American comic books published by Marvel Comics.  The original Human Torch was an andriod created in 1939 by writer-artist Carl Burgos for Marvel Comics' predecessor company, Timely Comics. The Human Torch, also known as Jim Hammond, first appeared in Marvel Comics #1 (Oct.1939), published by Marvel's predecessor, Timely Comics. 
+First appearence in Marvel Comics #1 (1939), title series of 38 issues from 1940-1954 by Marvel Comics.
+</p><p>
+The Human Torch is a fictional superhero appearing in American comic books published by Marvel Comics.  The original Human Torch was an android created in 1939 by writer-artist Carl Burgos for Marvel Comics' predecessor company, Timely Comics. The Human Torch, also known as Jim Hammond, first appeared in Marvel Comics #1 (Oct.1939), published by Marvel's predecessor, Timely Comics. 
 </p><p>
 The "Human" Torch was actually an android created by scientist Phineas Horton. He possessed the ability to surround himself with fire and control flames. In his earliest appearances, he was portrayed as a science fiction monstrosity, but quickly became a hero and adopted a secret identity as a police officer for the New York City Police Department. The Human Torch was one of Timely Comics' three signature characters, along with Captain America and Namor the Sub-Mariner. Like many superheroes, the Human Torch fell into obscurity by the 1950s.
 </p><p>
