--- a/BlackWidow/BlackWidow.html
+++ b/BlackWidow/BlackWidow.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-<img src="BlackWidow1.jpg"> <br>
-4 issues 1999, 3 issues 2001, 8 issues 2010, 20 issues 2014-2015, 12 issues 2016-2017, 5 issues 2019 Marvel<br>
+<img src="BlackWidow8.jpg"> <br>
+
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -26,10 +26,15 @@
 <div class="mySlides" style="text-align: center;"><img src="BlackWidow5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BlackWidow6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BlackWidow7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackWidow8.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+4 issues 1999, 3 issues 2001, 8 issues 2010, 20 issues 2014-2015, 12 issues 2016-2017, 5 issues 2019 Marvel.
+</p><p>
+Created by editor and plotter Stan Lee, scripter Don Rico, and artist Don Heck, the character debuted in Tales of Suspense #52 (April 1964). The character was introduced as a Russian spy, an antagonist of the superhero Iron Man. She later defected to the United States, becoming an agent of the fictional spy agency S.H.I.E.L.D. and a member of the superhero team the Avengers. 
 </p><p>
 1999 First Series:<ul>
 THE WARNING: The following analysis is for your eyes only and discusses the proposed elimination and replacement of Natasha Romanova, a.k.a. the Black Widow! 
