--- a/Blackthorne/Blackthorne.html
+++ b/Blackthorne/Blackthorne.html
@@ -32,6 +32,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Blackthorne12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Blackthorne13.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Blackthorne14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Blackthorne15.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -43,20 +44,21 @@ Blackthorne was established in 1985 by husband-and-wife team Steve Schanes and A
 </p><p>
 Titles
 </p><p>
-<li>Adventures in the Mystwood (1986)
-<li>Alien Ducklings (1986)
-<li>Alien Worlds (1986)
-<li>Atomic Man Comics (1986)
-<li>Blackthorne's 3-in-1 (1986)
-<li>Brik Hauss (1987)
-<li>Cold Blooded Chameleon Commandos (1986)
-<li>Crow of the Bear Clan (1986)
-<li>Danse (1987)
-<li>Dogaroo (1988)
-<li>Duckbots (1987)
-<li>Enchanted Valley (1987)
-<li>Failed Universe (1986)
-<li>Figments (1987)
+<li><a href="Blackthorne15.jpg">3-D Heroes</a> (1986)
+<li><a href="Blackthorne1.jpg">Adventures in the Mystwood</a> (1986)
+<li><a href="Blackthorne2.jpg">Alien Ducklings (1986)
+<li><a href="Blackthorne3.jpg">Alien Worlds</a> (1986)
+<li><a href="Blackthorne4.jpg">Atomic Man Comics</a> (1986)
+<li><a href="Blackthorne5.jpg">Blackthorne's 3-in-1</a> (1986)
+<li><a href="Blackthorne6.jpg">Brik Hauss</a> (1987)
+<li><a href="Blackthorne7.jpg">Cold Blooded Chameleon Commandos</a> (1986)
+<li><a href="Blackthorne8.jpg">Crow of the Bear Clan</a> (1986)
+<li><a href="Blackthorne9.jpg">Danse</a> (1987)
+<li><a href="Blackthorne10.jpg">Dogaroo</a> (1988)
+<li><a href="Blackthorne11.jpg">Duckbots</a> (1987)
+<li><a href="Blackthorne12.jpg">Enchanted Valley</a> (1987)
+<li><a href="Blackthorne13.jpg">Failed Universe</a> (1986)
+<li><a href="Blackthorne14.jpg">Figments</a> (1987)
 <li>Freak-Out on Infant Earths (1987)
 <li>Gift (1986)
 <li>Ground Pound! Comix (1987)
