--- a/index.html
+++ b/index.html
@@ -3454,6 +3454,13 @@
 </tr>
 
 <tr>
+<td>Blondie</td>
+<td>1930</td>
+<td>King Features</td>
+<td><a href="Blondie/Blondie.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blood: A Tale</td>
 <td>1988</td>
 <td>Epic</td>
@@ -3472,6 +3479,13 @@
 <td>2001</td>
 <td>Marvel</td>
 <td><a href="Bloodstone/Bloodstone.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blue Beetle</td>
+<td>1939</td>
+<td>Fox</td>
+<td><a href="BlueBeetle/BlueBeetle.html">Details</a></td>
 </tr>
 
 <tr>
