--- a/AtlasComics/AtlasComics.html
+++ b/AtlasComics/AtlasComics.html
@@ -43,7 +43,7 @@ Atlas Comics was the successor of Timely Comics, the company that magazine and p
 <li>Jann of the Jungle  (1955)
 <li>Jeanie Comics   (1947)
 <li>Joker Comics    (1941)
-<li>Jungle Action   (1954)
+<li><a href="../JungleAction/JungleAction.html">Jungle Action</a>   (1954)
 <li>Justice Comics  (1947)
 <li>Lawbreakers Always Lose!    (1948)
 <li>Love Adventures     (1949)
