--- a/JungleAction/JungleAction.html
+++ b/JungleAction/JungleAction.html
@@ -9,8 +9,6 @@
 
 <body>
 <img src="JungleAction001.jpg"> <br>
-Series: 6 issues 1954 - 1955, 24 issues 1974 - 1976 <br>
-Publisher: Atlas, Marvel<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -54,6 +52,8 @@ Publisher: Atlas, Marvel<br>
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+6 issues 1954 - 1955 by <a href="../AtlasComics/AtlasComics.html">Atlas</a>, 24 issues 1974 - 1976 by Marvel
 </p><p>
 Jungle Action is the name of two American comic book series published by Marvel Comics and its 1950s precursor, Atlas Comics. The Marvel version contained the first series starring the Black Panther, the first black superhero in mainstream comics, created by the writer/artist team of Stan Lee and Jack Kirby in Fantastic Four #52 (July 1966).
 </p><p>
