--- a/index.html
+++ b/index.html
@@ -3503,6 +3503,13 @@
 </tr>
 
 <tr>
+<td>Blue Ribbon</td>
+<td>1939</td>
+<td>MLJ</td>
+<td><a href="BlueRibbon/BlueRibbon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blueberry</td>
 <td>1989</td>
 <td>Marvel</td>
@@ -17618,6 +17625,13 @@
 <td>1983</td>
 <td>PC</td>
 <td><a href="VanguardIllustrated/VanguardIllustrated.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vaughn Bode</td>
+<td>1941</td>
+<td>Creator</td>
+<td><a href="VaughnBode/VaughnBode.html">Details</a></td>
 </tr>
 
 <tr>
