--- a/BrianBolland/BrianBolland.html
+++ b/BrianBolland/BrianBolland.html
@@ -33,7 +33,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Brian Bolland (1951) is a British comics artist. Best known in the United Kingdom as one of the definitive Judge Dredd artists for British comics anthology 2000 AD, he spearheaded the 'British Invasion' of the American comics industry, and in 1982 produced the artwork on Camelot 3000 (with author Mike W. Barr), which was DC Comics' first 12-issue comicbook maxiseries created for the direct market.
+Brian Bolland (1951) is a British comics artist. Best known in the United Kingdom as one of the definitive <a href="../JudgeDredd/JudgeDredd.html">Judge Dredd</a> artists for British comics anthology <a href="../2000AD/2000AD.html">2000 AD</a>, he spearheaded the 'British Invasion' of the American comics industry, and in 1982 produced the artwork on <a href="../Camelot3000/Camelot3000.html">Camelot 3000</a> (with author Mike W. Barr), which was DC Comics' first 12-issue comicbook maxiseries created for the direct market.
 </p><p>
 His rare forays into interior art also include <a href="../BatmanTheKillingJoke/BatmanTheKillingJoke.html">Batman: The Killing Joke</a>, with UK-based writer Alan Moore, and a self-penned Batman: Black and White story. Bolland remains in high demand as a cover artist, producing the vast majority of his work for DC Comics.
 </p>
