--- a/index.html
+++ b/index.html
@@ -2387,6 +2387,13 @@
 </tr>
 
 <tr>
+<td>Atomic Knights</td>
+<td>1950</td>
+<td>DC</td>
+<td><a href="AtomicKnights/AtomicKnights.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Atomic Robo</td>
 <td>2015</td>
 <td>IDW</td>
@@ -3642,6 +3649,13 @@
 </tr>
 
 <tr>
+<td>Boy Commandos</td>
+<td>1942</td>
+<td>DC</td>
+<td><a href="BoyCommandos/BoyCommandos.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Boy Maximortal</td>
 <td>2002</td>
 <td>King Hell</td>
@@ -3677,17 +3691,24 @@
 </tr>
 
 <tr>
+<td>Brave and the Bold</td>
+<td>1955</td>
+<td>DC</td>
+<td><a href="BraveAndTheBold/BraveAndTheBold.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brenda Starr</td>
+<td>1947</td>
+<td>Four Star</td>
+<td><a href="BrendaStarr/BrendaStarr.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Brian Bolland</td>
 <td>1951</td>
 <td>Creator</td>
 <td><a href="BrianBolland/BrianBolland.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Bryan Hitch</td>
-<td>1970</td>
-<td>Creator</td>
-<td><a href="BryanHitch/BryanHitch.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3702,6 +3723,13 @@
 <td>1969</td>
 <td>Creator</td>
 <td><a href="BrianZimmerman/BrianZimmerman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brick Bradford</td>
+<td>1933</td>
+<td>King Features</td>
+<td><a href="BrickBradford/BrickBradford.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3751,6 +3779,13 @@
 <td>1990</td>
 <td>Marvel</td>
 <td><a href="BruteForce/BruteForce.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bryan Hitch</td>
+<td>1970</td>
+<td>Creator</td>
+<td><a href="BryanHitch/BryanHitch.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3884,6 +3919,13 @@
 <td>1985</td>
 <td>Universal Press Syndicate</td>
 <td><a href="CalvinAndHobbes/CalvinAndHobbes.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Camelot 3000</td>
+<td>1985</td>
+<td>DC</td>
+<td><a href="Camelot3000/Camelot3000.html">Details</a></td>
 </tr>
 
 <tr>
