--- a/2099Sketchbook/2099Sketchbook.html
+++ b/2099Sketchbook/2099Sketchbook.html
@@ -7,14 +7,11 @@
 </head>
 
 <body>
-<h2>2099 Sketchbook</h2>
-<img src="2099Sketchbook.jpg"><br>
-Series: one-shot<br>
-Illustrator: cover by Rick Leonardi<br>
-Writer: Joey Cavalieri<br>
-Publisher: 1993 by Marvel<br>
+<img src="2099Sketchbook.jpg">
 <p>
-About: 2099 Sketchbook features drafting table sketches of 2099 Unlimited, Doom 2099, Punisher 2099, Ravage 2099, Spider-Man 2099, and X-Men 2099, with commentary by 2099 editor Joey Cavalieri.
+Illustrated by Rick Leonardi, written by Joey Cavalieri, 1 issue in 1993 by Marvel.
+</p><p>
+2099 Sketchbook features drafting table sketches of 2099 Unlimited, Doom 2099, Punisher 2099, Ravage 2099, Spider-Man 2099, and X-Men 2099, with commentary by 2099 editor Joey Cavalieri.
 </p>
 
 </body>
