--- a/2099Special/2099Special.html
+++ b/2099Special/2099Special.html
@@ -2,19 +2,16 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>2099 Special: World of Doom</title>
 </head>
 
 <body>
-<h2>2099 Special: World of Doom</h2>
-<img src="2099Special.jpg"><br>
-Series: one-shot<br>
-Cover: Greg Hildebrandt, Tim Hildebrandt<br>
-Illustrators: Steve Bunche, Joe Caponsacco, Jim Hoston, Jerry Kalinowski, Thomas Velazques<br>
-Writers: Robert J. Sodaro, Mindy Newell, Anya Martin, Terry Hernon, Stephen Urattos, Randy Meredith, Brian David-Marshall, Scott Benson<br>
-Publisher: 1995 by Marvel<br>
+<img src="2099Special.jpg">
 <p>
+Cover by Greg Hildebrandt and Tim Hildebrandt, illustrated by Steve Bunche, Joe Caponsacco, Jim Hoston, Jerry Kalinowski, Thomas Velazques. Written by Robert J. Sodaro, Mindy Newell, Anya Martin, Terry Hernon, Stephen Urattos, Randy Meredith, Brian David-Marshall, Scott Benson. 1 issue in 1995 by Marvel comics.
+</p><p>
 This 48-page magazine is a companion piece to Marvel’s recent revamping of its 2099 line, in which Doom has taken over the U.S. and instituted an “autocratic democracy” with himself as a one-man executive branch.
 </p><p>
 Included are interviews with writers Warren Ellis (Doom 2099), Pat Mills and Tony Skinner (Punisher 2099, Ravage 2099), and John Moore (X-Men 2099); a look at the work of Greg and Tim Hildebrandt (who also provided the cover); sketches of designs by Kevin O’Neill (Marshall Law, Metalzoic) for new SHIELD and Punishment Police uniforms; a first look at Toy Biz’s new line of X-Men 2099 action figures; an essay on the phenomenon of cyberspace and the 2099 writers’ difficulty in keeping pace with current technological advances; and Doom’s "Code of Citizen Conduct of the United States," which can be summed up as, "Do as President Doom says, or else."
