--- a/2099Unlimited/2099Unlimited.html
+++ b/2099Unlimited/2099Unlimited.html
@@ -2,17 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>2099 Unlimited</title>
 </head>
 
 <body>
-<h2>2099 Unlimited</h2>
-<img src="2099Unlimited.jpg"><br>
-Series: 10 issues<br>
-Illustrator: Chris Wozniak<br>
-Writer: Evan Skolnick <br>
-Publisher: 1993 to 1995 by Marvel<br>
+<img src="2099Unlimited.jpg">
+<p>
+Illustrated by Chris Wozniak, written by Evan Skolnick, 10 issues from 1993 to 1995 by Marvel.
 <p>
 About: Fans of Marvel’s dark world of 2099 get perhaps their best chance to experience it in this title. 2099 Unlimited features a variety of 2099 stories with an emphasis on strong storytelling and high production values. This title is also notable for its introduction of John Eisenhart a.k.a. Hulk 2099. 
 </p><p>
