--- a/2099World/2099World.html
+++ b/2099World/2099World.html
@@ -2,21 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>2099 World of Tomorrow</title>
 </head>
 
 <body>
-<h2>2099 World of Tomorrow</h2>
-<img src="2099World.jpg"><br>
-Series: 8 issues<br>
-Illustrator: Pasqual Ferry<br>
-Writers: Ben Raab, Joe Kelly<br>
-Publisher: 1996-1997 by Marvel
+<img src="2099World.jpg">
 <p>
-About: With the imminent cancellation of the 2099 sub-imprint, Marvel gathered many of the characters from that continuity into this umbrella title. X-Men 2099, Spider-Man 2099, Doom 2099, Doctor Strange, and a myriad of original characters struggle to achieve their collective goals and win some time in the spotlight in the world at the end of the next century.
+Illustrated by Pasqual Ferry, written by Ben Raab and Joe Kelly, 8 issues from 1996-1997 by Marvel.
+<p>
+With the imminent cancellation of the 2099 sub-imprint, Marvel gathered many of the characters from that continuity into this umbrella title. X-Men 2099, Spider-Man 2099, Doom 2099, Doctor Strange, and a myriad of original characters struggle to achieve their collective goals and win some time in the spotlight in the world at the end of the next century.
 </p><p>
-Story: Doctor Doom, ever the arrogant megalomaniac, is determined to defeat the alien race that threatens earth with the techno-organic virus by appropriating it for himself. To that end he enlists Miguel O’Hara, the Spider-Man of 2099.
+Doctor Doom, ever the arrogant megalomaniac, is determined to defeat the alien race that threatens earth with the techno-organic virus by appropriating it for himself. To that end he enlists Miguel O’Hara, the Spider-Man of 2099.
 </p>
 
 </body>
