--- a/2099ADGenesis/2099ADGenesis.html
+++ b/2099ADGenesis/2099ADGenesis.html
@@ -2,21 +2,17 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>2099AD Genesis</title>
 </head>
 
 <body>
-<h2>2099 A.D. Genesis</h2>
 <img src="2099ADGenesis.jpg"><br>
-Series: one-shot with 2099AD story arc<br>
-Illustrator: Dale Eaglesham<br>
-Writer: Warren Ellis<br>
-Publisher: 1995 by Marvel<br>
+Illustrated by Dale Eaglesham, written by Warren Ellis, 1 issue in 1995 by Marvel.
 <p>
-About: Packaged in a deluxe chromium cover and illustrated in the crowded, detail-rich 1990s style, 2099: Genesis is meant for hardcore Marvel enthusiasts familiar with the various twists and turns of both the 2099 and mutant continuities. Unfortunately, Marvel pulled the plug on all the 2099 titles shortly after this title was first released as part of the consolidation that preceded its declaration of bankruptcy.
+Packaged in a deluxe chromium cover and illustrated in the crowded, detail-rich 1990s style, 2099: Genesis is meant for hardcore Marvel enthusiasts familiar with the various twists and turns of both the 2099 and mutant continuities. Unfortunately, Marvel pulled the plug on all the 2099 titles shortly after this title was first released as part of the consolidation that preceded its declaration of bankruptcy.
 </p><p>
-Story: <br>
 Dust, a mutant from the past, comes to Halo City in search of the mutant descendents of his former teammates, the 20th century X-Men. In the course of the story, which is meant as the prologue to a new series, we encounter Spider-Man, Daredevil, Doctor Doom, and the other denizens of Marvel’s dark future.
 </p>
 
