--- a/2099Manifest/2099Manifest.html
+++ b/2099Manifest/2099Manifest.html
@@ -2,22 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>2099 Manifest Destiny</title>
 </head>
 
 <body>
-<h2>2099 Manifest Destiny</h2>
-<img src="2099Manifest.jpg"><br>
-Series: one-shot<br>
-Illustrators: Mike McKone, Mark McKenna<br>
-Writer: Len Kaminski<br>
-Publisher: 1998 by Marvel
+<img src="2099Manifest.jpg">
 <p>
-About: 48 pages, can't find anybody that likes this one. Looks like it ends the whole 2099 branch. In 1996, when Marvel, during a cost-cutting exercise, fired the editor Joey Cavalieri, many of the 2099 creators (including Peter David and Warren Ellis) quit the line in protest and sales slumped. This issue killed it.
+Illustrated by Mike McKone and Mark McKenna, written by Len Kaminski, 1 issue in 1998 by Marvel.
+<p>
+Captain America was found in suspended animation and, with Miguel O'Hara, assembled various 2099 heroes into a new team of Avengers. The story summarized the years from 2099 to 3099, with humanity transforming the corporate world of 2099 into a utopia and then expanding into space.
 </p><p>
-Story: Captain America was found in suspended animation and, with Miguel O'Hara, assembled various 2099 heroes into a new team of Avengers. The story summarized the years from 2099 to 3099, with humanity transforming the corporate world of 2099 into a utopia and then expanding into space.
-
+48 pages, can't find anybody that likes this one. Looks like it ends the whole 2099 branch. In 1996, when Marvel, during a cost-cutting exercise, fired the editor Joey Cavalieri, many of the 2099 creators (including Peter David and Warren Ellis) quit the line in protest and sales slumped. This issue killed it.
 </p>
 </body>
 </html>
