--- a/AFineLinePress/AFineLinePress.html
+++ b/AFineLinePress/AFineLinePress.html
@@ -18,7 +18,11 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AFineLinePress1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AFineLinePress2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AFineLinePress3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AFineLinePress4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AFineLinePress5.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
