--- a/JoJoComics/JoJoComics.html
+++ b/JoJoComics/JoJoComics.html
@@ -27,6 +27,13 @@
 <div class="mySlides" style="text-align: center;"><img src="JoJo6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JoJo7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JoJo8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoJo9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoJo10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoJo11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoJo12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoJo13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoJo14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoJo15.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
