--- a/index.html
+++ b/index.html
@@ -3824,6 +3824,13 @@
 </tr>
 
 <tr>
+<td>Bulletman</td>
+<td>1939</td>
+<td>Fawcett</td>
+<td><a href="Bulletman/Bulletman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bulletproof Coffin</td>
 <td>2010</td>
 <td>Image</td>
@@ -7615,6 +7622,13 @@
 </tr>
 
 <tr>
+<td>Fritzi Ritz</td>
+<td>1922</td>
+<td>United Feature</td>
+<td><a href="FritziRitz/FritziRitz.html">Details</a></td>
+</tr>
+
+<tr>
 <td>From Hell</td>
 <td>1991</td>
 <td>Mad Love</td>
@@ -8507,6 +8521,13 @@
 <td>2011</td>
 <td>Pantheon</td>
 <td><a href="Habibi/Habibi.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hagar the Horrible</td>
+<td>1973</td>
+<td>King Features</td>
+<td><a href="HagarTheHorrible/HagarTheHorrible.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12460,6 +12481,13 @@
 </tr>
 
 <tr>
+<td>Monsters Attack</td>
+<td>1989</td>
+<td>Globe</td>
+<td><a href="MonstersAttack/MonstersAttack.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Monsters on the Prowl</td>
 <td>1971</td>
 <td>Marvel</td>
@@ -12856,6 +12884,13 @@
 <td>1948</td>
 <td>Marvel</td>
 <td><a href="Namora/Namora.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nancy</td>
+<td>1938</td>
+<td>United Feature</td>
+<td><a href="Nancy/Nancy.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13757,7 +13792,7 @@
 <tr>
 <td>Peanuts</td>
 <td>1950</td>
-<td>United Feature Syndicate</td>
+<td>United Feature</td>
 <td><a href="Peanuts/Peanuts.html">Details</a></td>
 </tr>
 
