--- a/index.html
+++ b/index.html
@@ -3852,6 +3852,13 @@
 </tr>
 
 <tr>
+<td>Buster Brown</td>
+<td>1902</td>
+<td>New York Herald</td>
+<td><a href="BusterBrown/BusterBrown.html">Details</a></td>
+</tr>
+
+<tr>
 <td><a name ="c">Cable </td>
 <td>1993 </td>
 <td>Marvel </td>
@@ -11078,6 +11085,13 @@
 <td>2003</td>
 <td>Vertigo</td>
 <td><a href="Losers/Losers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lou Cameron</td>
+<td>1924</td>
+<td>Creator</td>
+<td><a href="LouCameron/LouCameron.html">Details</a></td>
 </tr>
 
 <tr>
